syntax = "proto3";
package rental.v1;
option go_package="coolcar/rental/api/gen/v1;rentalpb";
// value object
message Location{
    double latitude = 1;
    double longitude = 2;
}
// 移动距离和钱是实时的，绑定的
message LocationStatus{
    Location location = 1;
    int32 fee_cent = 2;
    double km_driven = 3;
    string poi_name = 4;
}
// value object
enum TripStatus {
    TS_NOT_SPECIFIED=0;
    IN_PROGRES = 1;
    FINISHED = 2;
   
}
// 定义trip entity
message TripEntity{
    string id = 1;
    Trip trip = 2;
}
// value object
message Trip{
	string accountID = 1;
    string carID = 2;
    LocationStatus start = 3;
    LocationStatus current = 4;
    LocationStatus end = 5;
    TripStatus status = 6;
}

message CreateTripRequest{
    string start = 1;
    string car_id = 2;
}
message GetTripRequest{
    string id = 1;
}

// rpc GetTrips(GetTripsRequest) returns (GetTripsResponse)
message GetTripsRequest{
	TripStatus status = 1;
}
message GetTripsResponse{
	repeated TripEntity trips = 1;
}
// 只能更新地点其他的都不能改
message UpdateTripRequest{
	string id = 1;
	Location current = 2;
	bool end_trip = 3;
}
service TripService{
    rpc CreateTrip (CreateTripRequest) returns (TripEntity);
    rpc GetTrip(GetTripRequest) returns (Trip) ;
    rpc GetTrips(GetTripsRequest) returns (GetTripsResponse);
    rpc UpdateTrip(UpdateTripRequest) returns (Trip);
}